Refactoring in process

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -65,16 +65,16 @@ akka {
 
 mongo {
   server = "localhost"
-  database = "steepup"
+  database = "snapthemall"
 
   test {
     server = "localhost"
-    database = "steepuptest"
+    database = "snapthemalltest"
   }
 
   prod {
     server = "mongo"
-    database = "steepup"
+    database = "snapthemall"
   }
 }
 
