--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 ### ADDED by gregunz.io ###
 
 .idea
+conf/production.conf
 
 ### JetBrains ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
