Everything should be implemented now

--- a/conf/silhouette.conf
+++ b/conf/silhouette.conf
@@ -39,11 +39,11 @@ silhouette {
   facebook.authorizationURL = "https://graph.facebook.com/v2.3/oauth/authorize"
   facebook.accessTokenURL = "https://graph.facebook.com/v2.3/oauth/access_token"
   facebook.redirectURL = "http://localhost:9000/authenticate/facebook"
-  facebook.clientID = ""
-  facebook.clientID = ${?FACEBOOK_CLIENT_ID}
-  facebook.clientSecret = ""
-  facebook.clientSecret = ${?FACEBOOK_CLIENT_SECRET}
-  facebook.scope = "email"
+  facebook.clientID = "216698218808232"
+  //facebook.clientID = ${?FACEBOOK_CLIENT_ID}
+  facebook.clientSecret = "122b4948e2a9bce1b6a79685eb0d0b18"
+  //facebook.clientSecret = ${?FACEBOOK_CLIENT_SECRET}
+  facebook.scope = "user_friends"
 
   # Google provider
   google.authorizationURL = "https://accounts.google.com/o/oauth2/auth"
