Upload picture working !!

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -80,6 +80,6 @@ mongo {
 
 jobs.tokencleaner.interval = 1 hour
 
-my.data.path = /home/snap/data/
+my.data.path = "/home/snap/data/"
 
 include "silhouette.conf"
