--- a/conf/application.conf
+++ b/conf/application.conf
@@ -64,7 +64,7 @@ akka {
 # by providing an application-logger.xml file in the conf directory.
 
 mongo {
-  server = "localhost"
+  server = "mongo"
   database = "snapthemall"
 
   test {
