--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 
 .idea
 conf/production.conf
+/data/
 
 ### JetBrains ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
